Basic integration mode

--- a/Rigid Body Sandbox.ipynb
+++ b/Rigid Body Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "15170dd9",
+   "id": "299fb180",
    "metadata": {},
    "source": [
     "## Rigid Body Sandbox"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e9ec5548",
+   "id": "656d6033",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f35e645b",
+   "id": "c4147e47",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7b3a1058",
+   "id": "7b41f4a3",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e4b9d102",
+   "id": "6d653f38",
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +83,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "8ce9c0e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 2])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([3, 4, 5]) % [3, 4, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "504ee039",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8bd66513",
+   "id": "5867ba24",
    "metadata": {},
    "outputs": [],
    "source": []
