Cached separating plane finally working

--- a/Rigid Body Sandbox.ipynb
+++ b/Rigid Body Sandbox.ipynb
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cef569c1",
+   "id": "bcca65f3",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "59ae8b56",
+   "id": "39df82a7",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7e5db6b",
+   "id": "fdfe36da",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5ff4119b",
+   "id": "855d4f4b",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e81f2d6c",
+   "id": "335f4afa",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "32f5cc34",
+   "id": "b6d0b133",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8b65e67a",
+   "id": "eb0953b4",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9ea6f6c7",
+   "id": "81a0e375",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3967605d",
+   "id": "0336acf8",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "87eab799",
+   "id": "46254095",
    "metadata": {},
    "outputs": [
     {
@@ -458,8 +458,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "5bf1d947",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3],\n",
+       "       [2, 4]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([[1, 2],\n",
+    "         [3, 4]]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "2731a5f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([2, 3]) is np.array([2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2c82c980",
+   "id": "0cdf0e0a",
    "metadata": {},
    "outputs": [],
    "source": []
