Buggy collision (separating vs. collision contacts not being classified correctly)
Collision response seems correct tho

--- a/Rigid Body Sandbox.ipynb
+++ b/Rigid Body Sandbox.ipynb
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bcca65f3",
+   "id": "f7222770",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "39df82a7",
+   "id": "1a8b90c2",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fdfe36da",
+   "id": "fecc3a2f",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "855d4f4b",
+   "id": "691aa84e",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "335f4afa",
+   "id": "ff16ce84",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b6d0b133",
+   "id": "85421646",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "eb0953b4",
+   "id": "5ce7afab",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "81a0e375",
+   "id": "6147c2cb",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0336acf8",
+   "id": "f4a824be",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "46254095",
+   "id": "ad77826e",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5bf1d947",
+   "id": "648772e4",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2731a5f7",
+   "id": "91ac6560",
    "metadata": {},
    "outputs": [
     {
@@ -502,8 +502,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "b1e16cb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([   0.   ,   -0.   , 1077.709]), 1077.7089999999996)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([2, 3, 0])\n",
+    "b = np.array([-359, 0.3545, 0])\n",
+    "poopoo = np.cross(a, b)\n",
+    "peepee = np.linalg.det([a[:-1], b[:-1]])\n",
+    "poopoo, peepee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ca30dd8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1077.7089999999996"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.det([a[:-1], b[:-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0cdf0e0a",
+   "id": "ca36420b",
    "metadata": {},
    "outputs": [],
    "source": []
