--- a/Rigid Body Sandbox.ipynb
+++ b/Rigid Body Sandbox.ipynb
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7222770",
+   "id": "c01c4515",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1a8b90c2",
+   "id": "70e023e8",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fecc3a2f",
+   "id": "b9640ae4",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "691aa84e",
+   "id": "36ea9026",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ff16ce84",
+   "id": "ca8ef93a",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "85421646",
+   "id": "83ce48d4",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5ce7afab",
+   "id": "c5570e84",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6147c2cb",
+   "id": "28809e43",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f4a824be",
+   "id": "8be70bba",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ad77826e",
+   "id": "bc897dfc",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "648772e4",
+   "id": "b5872e3e",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "91ac6560",
+   "id": "c23a0736",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b1e16cb7",
+   "id": "5f79c43a",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "ca30dd8d",
+   "id": "5ee0b30d",
    "metadata": {},
    "outputs": [
     {
@@ -548,8 +548,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "id": "485b833a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1],\n",
+       "       [4, 5],\n",
+       "       [1, 2]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [[1, 1], [4, 5], [1, 2]]\n",
+    "np.array(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ca36420b",
+   "id": "211a03be",
    "metadata": {},
    "outputs": [],
    "source": []
