--- a/Rigid Body Sandbox.ipynb
+++ b/Rigid Body Sandbox.ipynb
@@ -572,8 +572,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "211a03be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "r = np.arange(10, 13)\n",
+    "frozenset([10, 11]).issubset(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e1365ae",
    "metadata": {},
    "outputs": [],
    "source": []
